[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/levels/01 stick.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Gameplay.gd" type="Script" id=2]
[ext_resource path="res://scenes/Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/1bitpack_kenney/monochrome_transparent.png" type="Texture" id=4]

[node name="Gameplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="level" parent="." instance=ExtResource( 1 )]

[node name="items" type="Node2D" parent="."]

[node name="drones" type="Node2D" parent="."]

[node name="Cursor" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, 8 )

[node name="UI" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_bottom = 8.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slow_down" type="TextureButton" parent="UI"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
focus_mode = 0
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="UI/slow_down"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 8, 8 )
region_enabled = true
region_rect = Rect2( 629, 340, 16, 16 )

[node name="speed" type="TextureButton" parent="UI"]
margin_left = 8.0
margin_right = 16.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
focus_mode = 0
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="UI/speed"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 8, 8 )
region_enabled = true
region_rect = Rect2( 612, 289, 16, 16 )

[node name="speed_up" type="TextureButton" parent="UI"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
focus_mode = 0
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="UI/speed_up"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 8, 8 )
region_enabled = true
region_rect = Rect2( 612, 340, 16, 16 )

[node name="back" type="TextureButton" parent="UI"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
focus_mode = 0
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="UI/back"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 8, 8 )
region_enabled = true
region_rect = Rect2( 527, 357, 16, 16 )

[node name="craft_wiki" type="TextureButton" parent="UI"]
margin_left = 32.0
margin_right = 40.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
focus_mode = 0
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="UI/craft_wiki"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 8, 8 )
region_enabled = true
region_rect = Rect2( 765, 272, 16, 16 )

[node name="menu" type="TextureButton" parent="UI"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
focus_mode = 0
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="UI/menu"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 8, 8 )
region_enabled = true
region_rect = Rect2( 697, 272, 16, 16 )

[node name="skip" type="TextureButton" parent="UI"]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
focus_mode = 0
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="UI/skip"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 8, 8 )
region_enabled = true
region_rect = Rect2( 493, 357, 16, 16 )
[connection signal="pressed" from="UI/slow_down" to="." method="slow_down"]
[connection signal="pressed" from="UI/speed" to="." method="slow_down"]
[connection signal="pressed" from="UI/speed_up" to="." method="speed_up"]
[connection signal="pressed" from="UI/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="UI/craft_wiki" to="." method="_on_craft_wiki_pressed"]
[connection signal="pressed" from="UI/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="UI/skip" to="." method="_on_skip_pressed"]
